Fixed Genre alignment (along with other elements)
fixed weird redundancies too shared between each file.

added heart easter egg too because why not

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 	height: 100%;
 	top: 0;
 	left: 0;
-	background-color: #c1c1c1;
+	background-color: #f0f0f0; /* #c1c1c1; */
 }
 
 .background-image {
