--- a/src/components/GenreComponents/GenrePage/GenrePage.css
+++ b/src/components/GenreComponents/GenrePage/GenrePage.css
@@ -1,19 +1,29 @@
+.easter-egg {
+	margin-bottom: 100px;
+	text-align: center;
+}
+
 .genre-page-container {
-   max-height: 90vh;  /* Set the maximum height to 90% of the viewport height */
-   overflow-y: auto;   /* Enable vertical scrolling */
-   padding: 20px;      /* Optional: Add padding for better layout */
-   box-sizing: border-box; /* Include padding in height calculation */
+	margin: 100px;
+	margin-top: 0;
+  max-height: 100vh;  /* Set the maximum height to 90% of the viewport height */
+  overflow-y: auto;   /* Enable vertical scrolling */
+  padding: 20px;      /* Optional: Add padding for better layout */
+  box-sizing: border-box; /* Include padding in height calculation */
 }
 
 .genre-page-container h1 {
   text-align: left;
-	margin: 100px;
 	margin-bottom: 0;
 	margin-top: 30vh;
 	padding: 0;
 }
 
-.description {
-	margin-left: 100px;
-	margin-right: 100px;
+.main-genre-container {
+	background-color: #ffffff;
+	padding: 20px;
+	/* width: 100%; */
+	margin-bottom: 40px;
+	border: none;
+	border-radius: 20px;
 }
